# ihavenoidea

./: .gitignore  CMakeLists.txt  README.md
src/: console_cli.cpp  console_cli.h  dllmain.cpp  gui.cpp  gui.h  log.cpp  log.h  recorder.cpp  recorder.h  speedhack.cpp  speedhack.h  state.cpp  state.h
